--- a/style.css
+++ b/style.css
@@ -4,6 +4,59 @@
     padding: 0;
     margin: 0;
 }
+
+
+.selecao{
+    height: 100vh;
+    gap: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.selecao h2{
+    text-align: center;
+    background-color: rgb(162, 255, 162);
+    height: 60px;
+    width: 120px;
+    border-radius: 50px;
+    cursor: pointer;
+}
+
+.icon{
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    cursor: pointer;
+    position: fixed;
+    left: 10px;
+    left: 50%;
+    display: none;
+
+}
+.buttons {
+    display: none;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    transition: all 0.5s ease-in;
+    position: fixed;
+    top: 70px;  
+    left: 30%;
+}
+.buttons button{
+    cursor: pointer;
+    height: 50px;
+    width: 120px;
+    margin-bottom: 10px;
+    border-radius: 50px;
+    border: none;   
+    background-color: rgba(212, 254, 212, 0.715);
+    transition: all 0.5s ease-in;
+}
+.buttons button:hover{
+    transition: all 0.5s ease-in;
+    background-color: rgb(162, 255, 162);
+}
+
 body {
     background-color: #f0fff0;
 }
@@ -40,7 +93,7 @@ section h1 {
 
 .pokemon img {
     max-width: 100%;
-    max-height: 80%;
+    max-height: 80%;    
 }
 
 .pokemonpng {
@@ -92,11 +145,19 @@ section h1 {
         margin: 1rem;
         gap: 0.5rem;
     }
+    .buttons{
+        grid-template-columns: 1fr;
+        left: 40%;
+    }
 }
 
 @media screen and (min-width: 794px) {
     #pokemonList {
         grid-template-columns: 1fr 1fr;
+    }
+    .buttons{
+        grid-template-columns: 1fr 1fr;
+        left: 35%;
     }
 }
 
@@ -104,12 +165,30 @@ section h1 {
     #pokemonList {
         grid-template-columns: 1fr 1fr 1fr;
     }
+    .buttons{
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        left: 35%;
+    }
 }
 
 @media screen and (min-width: 1632px) {
     #pokemonList {
         grid-template-columns: 1fr 1fr 1fr 1fr;
     }
+    .buttons{
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        left: 37%;
+    }
+}
+
+@media screen and (min-width: 360px) {
+    .buttons{
+        
+    }
+    .icon{
+        ;
+    }
+    
 }
 
 /* Cores background dos pokemons */
