--- a/style.css
+++ b/style.css
@@ -5,24 +5,27 @@
     margin: 0;
 }
 
+body {
+    background-color: #f0fff0;
+    font-family: 'Roboto', sans-serif;
+}
 
-.selecao{
-    height: 100vh;
-    gap: 30px;
+
+/* Estilização geral da tag section*/
+section {
     display: flex;
-    flex-direction: column;
     align-items: center;
-    justify-content: center;
+    flex-direction: column;
+    height: 100vh;
+    width: 100vw;
+    padding: 1rem;
 }
-.selecao h2{
-    text-align: center;
-    background-color: rgb(162, 255, 162);
-    height: 60px;
-    width: 120px;
-    border-radius: 50px;
-    cursor: pointer;
+section h1 {
+    margin: 50px;
 }
 
+
+/* icon e mudança de gerações */
 .icon{
     height: 50px;
     width: 50px;
@@ -57,21 +60,28 @@
     background-color: rgb(162, 255, 162);
 }
 
-body {
-    background-color: #f0fff0;
-}
-section {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+
+/* Tela primaria, escolha das gerações */
+.selecao{
     height: 100vh;
-    width: 100vw;
-    padding: 1rem;
+    gap: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
-section h1 {
-    margin: 50px;
+.selecao h2{
+    padding: 5px;
+    text-align: center;
+    background-color: rgb(162, 255, 162);
+    height: 70px;
+    width: 140px;
+    border-radius: 50px;
+    cursor: pointer;
 }
 
+
+/* li dos pokemons */
 .pokemon {
     display: flex;
     flex-direction: column;
@@ -134,7 +144,65 @@ section h1 {
     width: 70px;
 }
 
-/* adptação da tela de acordo com o tamanho */
+
+/* card info */
+.containerNameTypes{
+    display: flex;
+    gap: 0.2rem;
+    margin-top: 17px;
+}
+
+.organizandoImagens{
+    width: 100%;
+    height: 150px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    
+}
+
+.organizandoImagens img{
+   
+    width: 200px;
+    max-height: 300px;
+}
+
+.containerStatus{
+    transition: all 0.5s ease-in;
+
+    background-color: aliceblue;
+    width: 100%;
+    height: 152px;
+    display: flex;
+    justify-content: space-between;
+    border-end-end-radius: 50px;
+    border-end-start-radius: 50px;
+    
+}
+.containerStatus:hover{
+    transition: all 0.5s ease-in;
+    background-color: rgba(240, 248, 255, 0.267);
+}
+
+.containerStatus .status{
+    width: 150px;
+    margin-top: 13px;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+
+#status1{
+    margin-left: 10px;
+}
+
+#status2{
+    margin-right: 10px;
+}
+
+
+
+/* reponsividade da tela de acordo com o tamanho */
 @media screen and (min-width: 360px) {
     #pokemonList {
         grid-template-columns: 1fr;
@@ -180,16 +248,13 @@ section h1 {
         left: 37%;
     }
 }
-
-@media screen and (min-width: 360px) {
-    .buttons{
-        
+@media screen and (min-width: 1179px){
+    .selecao{
+        flex-direction: row;
     }
-    .icon{
-        ;
-    }
-    
 }
+
+
 
 /* Cores background dos pokemons */
 .normal {
@@ -430,6 +495,81 @@ section h1 {
     border: solid 1px rgb(0, 0, 0);
 }
 .containerTypes .fairy {
+    background-color: rgb(255, 156, 226);
+    border: solid 1px rgb(0, 0, 0);
+}
+
+/* Cores background dos pokemons types conainerNameTypes*/
+.containerNameTypes .normal {
+    background-color: rgb(169, 169, 121);
+    border: solid 1px rgb(0, 0, 0);
+}
+.containerNameTypes .fire {
+    background-color: rgb(240, 129, 44);
+    border: solid 1px rgb(0, 0, 0);
+}
+.containerNameTypes .water {
+    background-color: rgb(104, 145, 240);
+    border: solid 1px rgb(0, 0, 0);
+}
+.containerNameTypes .grass {
+    background-color: rgb(121, 201, 79);
+    border: solid 1px rgb(0, 0, 0);
+}
+.containerNameTypes .flying {
+    background-color: rgb(169, 145, 240);
+    border: solid 1px rgb(0, 0, 0);
+}
+.containerNameTypes .fighting {
+    background-color: rgb(193, 44, 35);
+    border: solid 1px rgb(0, 0, 0);
+}
+.containerNameTypes .poison {
+    background-color: rgb(161, 62, 161);
+    border: solid 1px rgb(0, 0, 0);
+}
+.containerNameTypes .electric {
+    background-color: rgb(248, 209, 44);
+    border: solid 1px rgb(0, 0, 0);
+}
+.containerNameTypes .ground {
+    background-color: rgb(225, 193, 104);
+    border: solid 1px rgb(0, 0, 0);
+}
+.containerNameTypes .rock {
+    background-color: rgb(185, 161, 53);
+    border: solid 1px rgb(0, 0, 0);
+}
+.containerNameTypes .psychic {
+    background-color: rgb(248, 87, 137);
+    border: solid 1px rgb(0, 0, 0);
+}
+.containerNameTypes .ice {
+    background-color: rgb(153, 217, 217);
+    border: solid 1px rgb(0, 0, 0);
+}
+.containerNameTypes .bug {
+    background-color: rgb(169, 185, 26);
+    border: solid 1px rgb(0, 0, 0);
+}
+.containerNameTypes .ghost {
+    background-color: rgb(112, 87, 153);
+    border: solid 1px rgb(0, 0, 0);
+}
+.containerNameTypes .steel {
+    background-color: rgb(185, 185, 209);
+    border: solid 1px rgb(0, 0, 0);
+}
+.containerNameTypes .dragon {
+    background-color: rgb(112, 53, 248);
+    border: solid 1px rgb(0, 0, 0);
+}
+
+.containerNameTypes .dark {
+    background-color: rgb(112, 87, 153);
+    border: solid 1px rgb(0, 0, 0);
+}
+.containerNameTypes .fairy {
     background-color: rgb(255, 156, 226);
     border: solid 1px rgb(0, 0, 0);
 }
